// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BaseFloatingMenu (Diamond Snapshot) > Admin (AYARLAR) görünümü snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100]"
  >
    <div
      class="w-[104px] flex flex-col-reverse items-center shadow-[0_10px_40px_rgba(0,0,0,0.15)] bg-white/50 backdrop-blur-2xl border border-white/50 p-1 sm:p-1 rounded-2xl sm:rounded-lg overflow-hidden"
    >
      <div
        class="w-full"
      >
        <button
          aria-label="Menüyü Aç"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        !bg-stone-900 !text-white hover:scale-105 active:scale-95 transition-all h-11 sm:h-8 w-full shadow-none rounded-lg relative overflow-hidden
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-1.5 w-full h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-menu"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 5h16"
                  />
                  <path
                    d="M4 12h16"
                  />
                  <path
                    d="M4 19h16"
                  />
                </svg>
              </div>
              <span
                class="text-[10px] font-black uppercase tracking-widest leading-none"
              >
                AYARLAR
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`BaseFloatingMenu (Diamond Snapshot) > Default görünüm (kapalı) snapshotu ile eşleşmeli 1`] = `
<DocumentFragment>
  <div
    class="z-[100]"
  >
    <div
      class="w-[104px] flex flex-col-reverse items-center shadow-[0_10px_40px_rgba(0,0,0,0.15)] bg-white/50 backdrop-blur-2xl border border-white/50 p-1 sm:p-1 rounded-2xl sm:rounded-lg overflow-hidden"
    >
      <div
        class="w-full"
      >
        <button
          aria-label="Menüyü Aç"
          class="
        relative inline-flex items-center justify-center transition-all duration-300 font-black uppercase tracking-widest active:scale-95 disabled:opacity-50 disabled:pointer-events-none overflow-hidden 
        bg-stone-100 text-stone-900 hover:bg-stone-200 
        px-3 py-1.5 text-[9px] gap-1.5 
        rounded-2xl 
        
        !bg-stone-900 !text-white hover:scale-105 active:scale-95 transition-all h-11 sm:h-8 w-full shadow-none rounded-lg relative overflow-hidden
      "
        >
          <div
            class="
          
          
        "
          >
            <div
              class="flex flex-row items-center justify-center gap-1.5 w-full h-full"
            >
              <div
                class="w-4 h-4 flex items-center justify-center shrink-0"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-menu w-full h-full p-0.5"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2.5"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 5h16"
                  />
                  <path
                    d="M4 12h16"
                  />
                  <path
                    d="M4 19h16"
                  />
                </svg>
              </div>
              <span
                class="text-[10px] font-black uppercase tracking-widest leading-none"
              >
                MENÜ
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
